--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -12,15 +12,15 @@ https://github.com/Foundry376/Mailspring/blob/master/app/static/style/base/ui-va
 @gray-lighter: darken(@gray-base, 92.5%);
 @white: #0a0a0a;
 
-@accent-primary: #58b660;
+@accent-primary: #5294e2;
 @accent-primary-dark: darken(@accent-primary, 10%);
 
-@background-primary: #212121;
-@background-off-primary: #212121;
-@background-secondary: #121212;
-@background-tertiary: #6d7987;
+@background-primary: #404552;
+@background-off-primary: #404552;
+@background-secondary: #2f343f;
+@background-tertiary: #2f343f;
 
-@border-color-primary: lighten(@background-primary, 10%);
+@border-color-primary: lighten(@background-secondary, 10%);
 @border-color-secondary: lighten(@background-secondary, 10%);
 @border-color-tertiary: lighten(@background-tertiary, 10%);
 @border-color-divider: @border-color-secondary;
@@ -34,8 +34,8 @@ https://github.com/Foundry376/Mailspring/blob/master/app/static/style/base/ui-va
 @text-color-heading: #fff;
 
 @text-color-link: @accent-primary;
-@text-color-link-hover: @accent-primary-dark;
-@text-color-link-active: @accent-primary-dark;
+@text-color-link-hover: @accent-primary;
+@text-color-link-active: @accent-primary;
 
 @btn-default-bg-color: lighten(@background-primary, 5%);
 @dropdown-default-bg-color: #404040;
@@ -48,5 +48,5 @@ https://github.com/Foundry376/Mailspring/blob/master/app/static/style/base/ui-va
 @list-selected-color: @text-color-inverse;
 @list-focused-color: @text-color;
 
-@toolbar-background-color: #121212;
-@panel-background-color: #121212;
+@toolbar-background-color: @background-secondary;
+@panel-background-color: @background-secondary;
